--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ section{
 	margin-bottom: 2%;
 	clear:left;
 	height:100%
-
-
 }
 
 aside{
@@ -41,15 +39,23 @@ article{
 
 header{
 	background-color: #ebebeb;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 nav{
 	background-color: #ebebeb;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin-top: 19.2px;
+	margin-bottom: 19.2px;
 }
 
 footer{
 	background-color: #ebebeb;
 	clear:both;
+	padding-top: 20px;
+	padding-bottom: 20px;
 
 }
 
